--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 }
 h1 {
     color: white;
+    text-align: center;
 }
 #player {
     background-color: blue;
@@ -56,6 +57,7 @@ button {
     grid-row: 10;
     grid-column: 8;
     visibility: hidden;
+    background-image: url(https://www.pngall.com/wp-content/uploads/5/Fuse-Bomb-PNG-Free-Image.png);
 }
 .blocked {
     background-color:#E97451;
@@ -64,3 +66,18 @@ button {
     border-radius: 8px;
     
 }
+#moven {
+    color: white;
+    text-align: end;
+}
+#reset {
+    color: white;
+    border-color: white;
+    background-color: black;
+    width: 100px;
+    height: 50px;
+    font-size: 22px;
+    position: fixed;
+    justify-content: end;
+}
+
