--- a/level2.css
+++ b/level2.css
@@ -123,3 +123,15 @@ button {
     display: flex;
     flex-direction: row;
 }
+header {
+    display: flex;
+    justify-content: space-between;
+}
+#menu, #nextp, #Previous{
+    height: 70px;
+    width: 120px;
+    background-color: transparent;
+    color: white;
+    font-size: x-large;
+    border: 1px solid;
+}
